sealedsecrets-ui/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sealedsecrets-ui-svc
  namespace: sealedsecrets
spec:
  selector:
    app: sealedsecrets-ui
  ports:
    - port: 80
      targetPort: 8080
