sealedsecrets-ui/ui.yaml
# https://github.com/bakito/sealed-secrets-web

apiVersion: apps/v1
kind: Deployment
metadata:
  name: sealedsecrets-ui
  namespace: sealedsecrets
  labels:
    app: sealedsecrets-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sealedsecrets-ui
  template:
    metadata:
      labels:
        app: sealedsecrets-ui
    spec:
      serviceAccountName: sealedsecrets-ui
      containers:
        - name: sealedsecrets-ui
          image: ghcr.io/bakito/sealed-secrets-web:main # https://github.com/bakito/sealed-secrets-web/pkgs/container/sealed-secrets-web
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: "200m"
              memory: "100Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: sealedsecrets-ui-svc
  namespace: sealedsecrets
spec:
  selector:
    app: sealedsecrets-ui
  ports:
    - port: 80
      targetPort: 80
    
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sealed-secrets-web-ingress
  namespace: sealedsecrets
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`sealedsecrets.mw.local`)
    priority: 10
    services:
    - name: sealedsecrets-ui-svc
      port: 80
